--- a/Contact.html
+++ b/Contact.html
@@ -1,43 +1,38 @@
 <!doctype html>
 <html>
-
     <head>
         <meta charset="utf-8">
-        <title>Contact</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/estilo.css" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+        <link type="text/css" rel="stylesheet" href="css/estilo.css">
         <link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
-
-
-        <!--favicon-->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+        <link type="text/css" href="css/responsiveslides.css" rel="stylesheet">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="js/responsiveslides.min.js"></script>
+        <script src="js/slides.js"></script>	
+        <title>Home - Berserk's Comics</title>
+         <!--favicon-->
         <link rel="icon" href="images/contact.png">
 
-
-
     </head>
-
-
-
-
+    <!-- CUERPO --> 
     <body>
         <div class="contenedor-principal">
             <header>
                 <div class="header">
                     <h1 class="titulo"> Berserk's Comics </h1>
                 </div>
-
                 <div class="navbar" id="navbar">
                     <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
                     <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
                     <a class="active" href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-                    <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
+                    <a href="reseña.html"><i class="fas fa-pencil-alt"></i> Reseñas</a>
                 </div>
             </header>
             <div class="contenedor">
                 <section class="formulario">
                     <!--Titulo del Formulario -->
-                    <h1 class="my-3">Contacto</h1>
+                    <h1 class="titulo">Contacto</h1>
 
                     <form action="" onsubmit="return validarFormulario()">
 
@@ -83,12 +78,10 @@
                                 <input id="submit" type="submit" name="submit" value="Enviar" />
                             </div>
                         </div>
-
-
                     </form>
-
                 </section>
             </div>
+
             <footer>
                 <div class="autores">
                     <div class="autor">
@@ -112,5 +105,5 @@
             <script src="js/topnav.js"></script>
         </div>
     </body>
-
 </html>
+
