--- a/reseña.html
+++ b/reseña.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,29 +8,52 @@
         <link type="text/css" rel="stylesheet" href="css/estilo.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
         <link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
-
-        <!--favicon-->
+        
+         <!--favicon-->
         <link rel="icon" href="images/review.png">
-
-
     </head>
-
-
-
-    <body> 
-       <div class="contenedor-principal">
-       <header>
-        <div class="header">
-            <h1 class="titulo"> Berserk's Comics </h1>
-        </div>
-        <div class="navbar" id="navbar">
-            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
-            <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
-            <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-            <a class="active" href="#"><i class="fa fa-fw fa-user"></i> Reseñas</a>
-        </div>
-        </header>
+    <body>
+        <div class="contenedor-principal">
+            <header>
+                <div class="header">
+                    <h1 class="titulo"> Berserk's Comics </h1>
+                </div>
+                <div class="navbar" id="navbar">
+                    <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
+                    <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
+                    <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
+                    <a class="active" href="reseña.html"><i class="fas fa-pencil-alt"></i> Reseñas</a>
+                </div>
+            </header>
+            <section class ="resenia">
+                <h2 align="center">Hellblazer de Brian Azzarello</h2><br/>
+                <br/>
+                <p>		Nada más oscuro que la forma en la que comienza el enorme arco argumental que Azzarello traza aquí, llevándose al cabronazo de John Constantine a la cárcel. Sin conocer de primeras los motivos por los que el protagonista ha ido a parar al trullo, y sin que sus páginas contengan ni un atisbo de concesiones a la galería —las primeras viñetas de la lectura dejan entrever a un preso siendo sodomizado por otro…ahí es nada—, el tiempo que nuestro “héroe” pasará entre rejas sirve al escritor y a un incomnesurable Richard Corben para ofrecernos lo que personalmente considero CUMBRE indiscutible de aquello de ‘Hellblazer’ que sí he leído: diálogos punzantes, personajes extremos, acciones aún más extremas y un tono de maravillosa sordidez son las características fundamentales de unas páginas que, además, prefiguran como decía antes los derroteros por los que va a discurrir la narración.</p><br/>
+                <img class="img-resenia" src="images/azzarello.jpg">
+				<p>		Lejos de ser el protagonista principal de la misma, Constantine es dibujado durante todo el volumen por Azzarello como el catalizador de lo que un siempre fascinante elenco de secundarios nos va ofreciendo. Y si de fascinación hay que hablar, debemos dar un salto desde el ‘Entre rejas’ con el que arranca la lectura al ‘Highwater’ que preludia el final de la misma. Situado en el pueblo del mismo nombre, uno de esos de la América profunda que tanto ha servido siempre a los intereses de Azzarello, la trama de neonazis que encuentran la horma de su zapato en Constantine es tan sólida y brutal que lo que da cierre a la lectura y a la permanencia del guionista en la cabecera, se queda algo por debajo.</p><br/>
+				<p>		Entendiendo ese “algo” como unas micras por debajo, valorando sobremanera el trabajo de Marcelo Frusin —un sosias de <b>Eduardo Risso</b> que, aún sin estar a la altura del artista argentino, respalda con solidez las propuestas argumentales de Azzarello— y dejando claro en última instancia que la lectura a la que aquí podemos acceder es, como dirían los yanquis, un “must-have”, creo que poco más se puede argumentar a favor de la que, por si no ha quedado claro, servidor considera la cumbre de una colección que desde que DC se reinventara, nunca ha vuelto a ser la misma. El cómic adulto echa mucho de menos en falta a las “travesuras” de John Constantine. Hora es ya de que en la Distinguida Competencia se den cuenta y hagan algo para remediar la muy prolongada ausencia del personaje de las callejuelas de Vertigo.</p><br/>
+			<a>Fuente: </a>
+            </section>
+            <footer>
+                <div class="autores">
+                    <div class="autor">
+                        <h3>Lillo, Martín</h3>
+                        <p class="subtitulo">Estudiante FaI</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Infante, Matias</h3>
+                        <p class="subtitulo">Estudiante FaI</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Morales, Matias</h3>
+                        <p class="subtitulo">Estudiante FaI</p>
+                    </div>
+                </div>
+                <div class="derechos">
+                    <p>Copyright 2018</p>
+                </div>
+            </footer>
+            <script src="js/topnav.js"></script>
 		</div>
-        <script src="js/topnav.js"></script>
     </body>
 </html>
