--- a/about.html
+++ b/about.html
@@ -1,105 +1,103 @@
 <!doctype html>
 <html>
-
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/estilo.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
         <link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
-        <!-- Add icon library -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+        <link type="text/css" href="css/responsiveslides.css" rel="stylesheet">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="js/responsiveslides.min.js"></script>
+        <script src="js/slides.js"></script>	
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-        <!--favicon-->
         <link rel="icon" href="images/about.png">
 
 
         <title>Nosotros</title>
     </head>
-
+    <!-- CUERPO --> 
     <body>
-        <!--Encabezado-->
         <div class="contenedor-principal">
             <header>
                 <div class="header">
                     <h1 class="titulo"> Berserk's Comics </h1>
                 </div>
-
                 <div class="navbar" id="navbar">
                     <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
-                    <a class="active" href="#"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
+                    <a class="active" href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
                     <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-                    <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
-				</div>
+                    <a href="reseña.html"><i class="fas fa-pencil-alt"></i> Reseñas</a>
+                </div>
             </header>
-               <div class="contenedor">
-
+            <div class="about">
                 <h1 class="my-3 centrar">¿Quienes somos?</h1>
-
-                <div class="row">
-
-
-                    <div class="card">
+                <div class="row contenedor-cartas">
+                    <div class="card matt">
                         <img src="images/matt.png" alt="matt" style="width:100%">
-                        <h1>Matias Morales</h1>
-                        <p class="title">CEO & Founder, Example</p>
-                        <p>University of Comahue</p>
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a> 
-                        <a href="#"><i class="fa fa-linkedin"></i></a> 
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
-                        <p><button>Contactar</button></p>
-                    </div>
+                        <h1 class="titulo-card">Matias Morales</h1>
+                        <p class="parrafo-titulo">CEO & Founder, Example</p>
+                        <p class="uni">University of Comahue</p>
+                        <div class="redes">
 
-                    <div class="card">
-                        <img src="images/mati.png" alt="mati" style="width:100%">
-                        <h1>Matias Infante</h1>
-                        <p class="title">CEO & Founder, Example</p>
-                        <p>University of Comahue</p>
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a> 
-                        <a href="#"><i class="fa fa-linkedin"></i></a> 
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
-                        <p><button>Contactar</button></p>
-                    </div>
+                            <a href="#"><i class="fab fa-dribbble"></i></a> 
+                            <a href="#"><i class="fab fa-twitter"></i></a> 
+                            <a href="#"><i class="fab fa-linkedin"></i></a> 
+                            <a href="#"><i class="fab fa-facebook"></i></a> 
+                        </div>
 
-                    <div class="card">
+                        <p><button class="btn-contactar">Contactar</button></p>
+                    </div>
+                    <div class="card martin">
                         <img src="images/martin.png" alt="martin" style="width:100%">
-                        <h1>Martin Lillo</h1>
-                        <p class="title">CEO & Founder, Example</p>
-                        <p>University of Comahue</p>
-                        <a href="#"><i class="fa fa-dribbble"></i></a> 
-                        <a href="#"><i class="fa fa-twitter"></i></a> 
-                        <a href="#"><i class="fa fa-linkedin"></i></a> 
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
-                        <p><button>Contactar</button></p>
+                        <h1 class="titulo-card">Martin Lillo</h1>
+                        <p class="parrafo-titulo">CEO & Founder, Example</p>
+                        <p class="uni">University of Comahue</p>
+                        <div class="redes">
+                            <a href="#"><i class="fab fa-dribbble"></i></a> 
+                            <a href="#"><i class="fab fa-twitter "></i></a> 
+                            <a href="#"><i class="fab fa-linkedin"></i></a> 
+                            <a href="#"><i class="fab fa-facebook "></i></a>
+                        </div>
+                        <p><button class="btn-contactar">Contactar</button></p>
+                    </div>
+                    <div class="card matias">
+                        <img src="images/mati.png" alt="mati" style="width:100%">
+                        <h1 class="titulo-card">Matias Infante</h1>
+                        <p class="parrafo-titulo">CEO & Founder, Example</p>
+                        <p class="uni">University of Comahue</p>
+                        <div class="redes">
+
+                            <a href="#"><i class="fab fa-dribbble"></i></a> 
+                            <a href="#"><i class="fab fa-twitter"></i></a> 
+                            <a href="#"><i class="fab fa-linkedin"></i></a> 
+                            <a href="#"><i class="fab fa-facebook"></i></a> 
+                        </div>
+                        <p><button class="btn-contactar">Contactar</button></p>
                     </div>
                 </div>
 
-                <footer>
-                    <div class="autores">
-                        <div class="autor">
-                            <h3>Lillo, Martínuli</h3>
-                            <p class="subtitulo">Desarrollador normal y corriente</p>
-                        </div>
-                        <div class="autor">
-                            <h3>Infante, Matias Ricardo</h3>
-                            <p class="subtitulo">Desarrollador normal y corriente</p>
-                        </div>
-                        <div class="autor">
-                            <h3>Morales, Matias Matt</h3>
-                            <p class="subtitulo">Desarrollador normal y corriente</p>
-                        </div>
-                    </div>
-                    <div class="derechos">
-                        <p>Copyright 2018</p>
-                    </div>
-                </footer>
-
-
-                <script src="js/topnav.js"></script>
-
             </div>
+            <footer>
+                <div class="autores">
+                    <div class="autor">
+                        <h3>Lillo, Martínuli</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Infante, Matias Ricardo</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Morales, Matias Matt</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                </div>
+                <div class="derechos">
+                    <p>Copyright 2018</p>
+                </div>
+            </footer>
         </div>
+        <script src="js/topnav.js"></script>
     </body>
 </html>
